--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <link rel="stylesheet" href="css/etherwallet-master.min.css">
   <script type="text/javascript" src="js/etherwallet-static.min.js"></script>
-  <script type="text/javascript" src="js/etherwallet-master.js"></script>
   <script type="text/javascript" src="js/localstorage.js"></script>
+  <script type="text/javascript" src="js/etherwallet-master.js"></script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fav/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="images/fav/favicon-32x32.png" sizes="32x32">
@@ -594,7 +594,7 @@
                 <div class="input-group-btn">
                   <a style="min-width: 170px" class="btn btn-default dropdown-toggle" class="dropdown-toggle" ng-click="dropdownAmount = !dropdownAmount"
                     ng-class="dropdownEnabled ? '' : 'disabled'">
-                    <strong>{{unitReadable}}
+                    <strong>Bitcoiin<!-- {{unitReadable}} -->
                       <i class="caret"></i>
                     </strong>
                   </a>
