--- a/index.html
+++ b/index.html
@@ -594,11 +594,11 @@
                 <div class="input-group-btn">
                   <a style="min-width: 170px" class="btn btn-default dropdown-toggle" class="dropdown-toggle" ng-click="dropdownAmount = !dropdownAmount"
                     ng-class="dropdownEnabled ? '' : 'disabled'">
-                    <strong>Bitcoiin<!-- {{unitReadable}} -->
-                      <i class="caret"></i>
+                    <strong>B2G<!-- {{unitReadable}} -->
+                      <!-- <i class="caret"></i> -->
                     </strong>
                   </a>
-                  <ul class="dropdown-menu dropdown-menu-right" ng-show="dropdownAmount && !tx.readOnly">
+                  <!-- <ul class="dropdown-menu dropdown-menu-right" ng-show="dropdownAmount && !tx.readOnly">
                     <li>
                       <a ng-class="{true:'active'}[tx.sendMode=='ether']" ng-click="setSendMode('ether')">{{ajaxReq.type}}</a>
                     </li>
@@ -607,7 +607,7 @@
                       {{token.getSymbol()}} </a>
                     </li>
 
-                  </ul>
+                  </ul> -->
                 </div>
               </div>
               <p>
