private key info added

--- a/index.html
+++ b/index.html
@@ -284,8 +284,9 @@
               </div>
               <a tabindex="0" role="button" class="btn teal_btn" func="generateSingleWallet" ng-click="genNewWallet()" translate="NAV_GenerateWallet">Generate Wallet</a>
               <p translate="x_PasswordDesc"> </p>
-              <!-- <br> -->
-              <p>NOTE :WE DO NOT STORE USER’S PRIVATE KEY OR PASSWORD. It is recommended that you enter a strong password and download the UTC file. You MUST write down the PASSWORD, save UTC file, PRIVATE key and ADDRESS because they CANNOT be recovered if lost and you can lose all your money! Please double check everything before moving forward!</p>
+              <p><strong style="color:#c7254e">NOTE: WE DO NOT STORE USER’S PRIVATE KEY OR PASSWORD. It is recommended that you enter a strong password and download the UTC file. You MUST write down the PASSWORD, save UTC file, PRIVATE key and ADDRESS because they CANNOT be recovered if lost and you can lose all your money! Please double check everything before moving forward!</strong></p>
+              <br>
+              <br>
             </section>
           </center>
         </article>
@@ -347,6 +348,8 @@
               type="text" readonly="readonly" style="max-width: 50rem;margin: auto;" />
 
             <br />
+
+            <p><strong style="color:#c7254e">NOTE: WE DO NOT STORE USER’S PRIVATE KEY OR PASSWORD. It is recommended that you enter a strong password and download the UTC file. You MUST write down the PASSWORD, save UTC file, PRIVATE key and ADDRESS because they CANNOT be recovered if lost and you can lose all your money! Please double check everything before moving forward!</strong></p>
 
             <h1 translate="x_Print">Print Paper Wallet</h1>
             <a tabindex="0" aria-label="{{'x_Print'|translate}}" aria-describedby="x_PrintDesc" role="button" class="btn btn-primary"
