--- a/index.html
+++ b/index.html
@@ -3667,7 +3667,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
 
   </section>
 
-  <footer role="content" aria-label="footer" ng-controller='footerCtrl' class="teal_footer" style="bottom: 0;position: fixed;width: 100%;z-index: 11;">
+  <!--<footer role="content" aria-label="footer" ng-controller='footerCtrl' class="teal_footer" style="bottom: 0;position: fixed;width: 100%;z-index: 11;">
     <article class="block__wrap" style="max-width: 1780px; margin: auto;min-height:30px;">
     </article>
     <center>
@@ -3675,7 +3675,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
     </center>
     <article class="block__wrap" style="max-width: 1780px; margin: auto;min-height:30px;">
     </article>
-  </footer>
+  </footer>-->
 
   <article class="modal fade" id="disclaimerModal" tabindex="-1">
     <section class="modal-dialog">
