utc download fix

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h1 translate="GEN_Label_2">Save your Keystore File (UTC / JSON) </h1>
 
             <a tabindex="0" role="button" class="btn btn-primary" href="{{blobEnc}}" download="{{encFileName}}" aria-label="{{'x_Download'|translate}} {{'x_Keystore'|translate}}"
-              aria-describedby="x_KeystoreDesc" ng-click="downloaded()" target="_blank" rel="noopener">
+              aria-describedby="x_KeystoreDesc" ng-click="downloaded()" rel="noopener">
               <span translate="x_Download"> DOWNLOAD </span>
               <span translate="x_Keystore2"> Keystore File (UTC / JSON) </span>
             </a>
