--- a/index.html
+++ b/index.html
@@ -3034,19 +3034,21 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
             </section>
             <section class="block">
               <main class="tab-pane active" ng-show="wallet!=null" ng-controller='signMsgCtrl'>
-                <span ng-click="getTransactions()" class="btn btn-info btn-block" style="margin-bottom:30px; ">Get Transaction History</span>
-                <table class="table table-striped txstatus__2 cont-md">
-                  <tbody>
-                    <tr ng-repeat="a in transactions">
-                      <td style="border-bottom: 1px solid #ddd;">
-                        TxHash: {{a.transactionHash}} <br>
-                        From: {{a.from}} <br>
-                        To: {{a.to}} <br>
-                        Amount: {{toB2G(a.value)}}
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+                <span ng-click="getTransactions()" class="btn btn-info btn-block btsize" style="margin-bottom:30px; ">Get Transaction History</span>
+                <div class="table-responsive">
+                  <table class="table table-striped txstatus__2 cont-md">
+                    <tbody>
+                      <tr ng-repeat="a in transactions">
+                        <td style="border-bottom: 1px solid #ddd;">
+                          TxHash: {{a.transactionHash}} <br>
+                          From: {{a.from}} <br>
+                          To: {{a.to}} <br>
+                          Amount: {{toB2G(a.value)}}
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </main>
             </section>
             <!-- <section class="block" ng-show="wallet.type=='default'">
