--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/fav/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="images/fav/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="images/fav/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="images/fav/manifest.json">
   <link rel="mask-icon" href="images/fav/safari-pinned-tab.svg" color="#0e97c0">
   <link rel="shortcut icon" href="images/fav/favicon.ico">
